# buguette

./: CMakeLists.txt  globalVariables.cpp  globalVariables.h  grammar.md  grammar.txt  lexer.cpp  lexer.h  lib.h  main.cpp  program.txt  starter.cpp  starter.h  tmp.txt
Generation/Operand/: PolizOperand.cpp  PolizOperand.h
Generation/Operator/: PolizOperator.cpp  PolizOperator.h
Generation/StackElement/: StackElement.cpp  (+1 more)
docs/: Function__TID_8h_source.html  PolizOperand_8h_source.html  PolizOperator_8h_source.html  SemanticAnalizator_8h_source.html  SemanticError_8h_source.html  StackElement_8h_source.html  SyntaxAnalizator_8h_source.html  SyntaxError_8h_source.html  Tree__variables__TID_8h_source.html  Trie_8h_source.html  annotated.html  classFunction__TID-members.html  classFunction__TID.html  classPolizOperand-members.html  classPolizOperand.html  classPolizOperator-members.html  classPolizOperator.html  classSemanticError-members.html  classSemanticError.html  classStackElement-members.html  classStackElement.html  classSyntaxError-members.html  classSyntaxError.html  classTree__variables__TID-members.html  classTree__variables__TID.html  classTrie-members.html  classTrie.html  classes.html  classvariables__TID-members.html  classvariables__TID.html  dir_10632e86daea24239cc1ffc88367274e.html  dir_1e742e9d9b8723f1f3e6fec5aeef53a9.html  dir_2d3d26aeb21eb6eb9740352d7e4d6e04.html  dir_2fb59a7a3851686deaa9c7c3af47b815.html  dir_40b7bfb375fc31fcb7b5f9f70ab2e773.html  dir_4728b2acfc994472bf0889e59c558784.html  dir_50088adecfe286c1c8d3fbc923d351af.html  dir_55736d84f21e1d5b6cf477796326511a.html  dir_58d83d19965974c3246bd12d7f613d35.html  dir_5994b9a3441f26c0db8d33a4843b1e34.html  (+44 more)
lexer/: lexer.cpp  lexer.h
run/: run.cpp  run.h
semantic_analizator/: SemanticAnalizator.cpp  SemanticAnalizator.h
sources/: program.txt  services_words  types
syntax_analizator/: SyntaxAnalizator.cpp  SyntaxAnalizator.h
(+24 files in other folders)
